# crbot

./: .gitignore  BUILD.bazel  CONTRIBUTORS  LICENSE  README  README.md  WORKSPACE  crbot.go  customfeature.go  deps.bzl  feature.go  gist.go  go.mod  go.sum  helpfeature.go  learnfeature.go  listfeature.go  moderationfeature.go  redis.go  run.sh  runtests.sh  system.go  system_test.go  unlearnfeature.go  update.sh  util.go
api/: BUILD.bazel  discordsession.go  gist.go  remotegist.go  remotehastebin.go
app/: BUILD.bazel  config.go  system.go  system_test.go
config/: BUILD.bazel  config.go
deploy/: BUILD.bazel  crbot.service  deploy.retry  deploy.sh  deploy.yml  deployment.yaml  hosts
feature/: BUILD.bazel  commandinterceptor.go  executor.go  feature.go  parser.go  registry.go
feature/factsphere/: BUILD.bazel  factsphereexecutor.go  factsphereparser.go  feature.go
feature/help/: BUILD.bazel  feature.go  helpexecutor.go  helpparser.go
feature/karma/: BUILD.bazel  feature.go  karmaexecutor.go  karmaparser.go  modelhelper.go
feature/karmalist/: BUILD.bazel  executor.go  karmalistexecutor.go  karmalistfeature.go  karmalistparser.go  modelhelper.go
feature/learn/: BUILD.bazel  customexecutor.go  customlearnexecutor.go  customlearnparser.go  customparser.go  feature.go  feature_test.go  learnexecutor.go  learnparser.go  unlearnexecutor.go  unlearnparser.go
feature/list/: BUILD.bazel  executor.go  feature.go  listexecutor.go  listparser.go  parser.go
feature/moderation/: BUILD.bazel  feature.go  feature_test.go  ricklistcommandinterceptor.go  ricklistexecutor.go  ricklistinfoexecutor.go  ricklistinfoparser.go
feature/vote/: BUILD.bazel  ballotexecutor.go  ballotparser.go  concludeexecutor.go  deprecatedvoteexecutor.go  feature.go  feature_test.go  modelhelper.go  modelhelper_test.go  startvoteexecutor.go  startvoteparser.go  statusexecutor.go  statusparser.go  statusutils.go  statusutils_test.go  vote.go  voteexecutor.go  voteparser.go
log/: BUILD.bazel  log.go
model/: BUILD.bazel  command.go  datatypes.go  redisstringmap.go  stringmap.go  utcclock.go  utctimer.go  vote.go
tests/: BUILD.bazel  system_test.go
tests/app/: BUILD.bazel
tests/feature/factsphere/: BUILD.bazel  feature_test.go
tests/feature/karma/: BUILD.bazel  feature_test.go
tests/feature/karmalist/: BUILD.bazel  feature_test.go  modelhelper_test.go
tests/feature/learn/: BUILD.bazel  feature_test.go
tests/feature/list/: BUILD.bazel  feature_test.go
tests/feature/moderation/: BUILD.bazel  feature_test.go
tests/feature/vote/: BUILD.bazel  feature_test.go  modelhelper_test.go  statusutils_test.go
testutil/: BUILD.bazel  discordsession.go  fakeutcclock.go  fakeutctimer.go  gist.go  inmemorystringmap.go  runner.go
util/: BUILD.bazel  discordsession.go  fakeutcclock.go  inmemorystringmap.go  util.go
