load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library", "go_prefix", "go_test")

go_prefix("github.com/jakevoytko/crbot")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "crbot.go",
        "helpfeature.go",
        "learnfeature.go",
        "listfeature.go",
        "system.go",
        "util.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "//api:go_default_library",
        "//app:go_default_library",
        "//feature:go_default_library",
        "//feature/moderation:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)

go_binary(
    name = "crbot",
    data = ["secret.json"],
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["system_test.go"],
    library = ":go_default_library",
    deps = [
        "//api:go_default_library",
        "//app:go_default_library",
        "//feature:go_default_library",
        "//util:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
