load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library", "go_prefix", "go_test")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_prefix("github.com/jakevoytko/crbot")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "crbot.go",
    ],
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "//api:go_default_library",
        "//app:go_default_library",
        "//config:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
    ],
)

go_binary(
    name = "crbot",
    data = ["secret.json"],
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

container_image(
  name = "secret_image",
  base = "@go_image_base//image",
  files = ["secret.json"],
)

go_image(
    name = "crbot_image",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
    base = ":secret_image",
)

container_bundle(
    name = "deploy_bundle",
    images = {
        "bazel:secret_image": ":secret_image",
        "bazel:crbot_image": ":crbot_image",
    },
)

go_test(
    name = "go_default_test",
    srcs = ["system_test.go"],
    library = ":go_default_library",
    deps = [
        "//api:go_default_library",
        "//app:go_default_library",
        "//feature/factsphere:go_default_library",
        "//feature/help:go_default_library",
        "//feature/learn:go_default_library",
        "//feature/list:go_default_library",
        "//feature/moderation:go_default_library",
        "//feature/vote:go_default_library",
        "//feature:go_default_library",
        "//testutil:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
