load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_binary", "go_library", "go_prefix")
load("@io_bazel_rules_docker//container:image.bzl", "container_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_bundle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_prefix("github.com/jakevoytko/crbot")

gazelle(name = "gazelle")

go_library(
    name = "go_default_library",
    srcs = [
        "crbot.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//app:go_default_library",
        "//config:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
        "@com_github_jakevoytko_go_stringmap//:go_default_library",
    ],
)

go_binary(
    name = "crbot",
    data = ["secret.json"],
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_image(
    name = "secret_image",
    base = "@go_image_base//image",
    files = ["secret.json"],
)

go_image(
    name = "crbot_image",
    base = ":secret_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

container_bundle(
    name = "deploy_bundle",
    images = {
        "bazel:secret_image": ":secret_image",
        "bazel:crbot_image": ":crbot_image",
    },
)
