load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "discordsession.go",
        "gist.go",
        "remotehastebin.go",
    ],
    importpath = "github.com/jakevoytko/crbot/api",
    visibility = ["//visibility:public"],
    deps = [
        "//log:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
