load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "redisstringmap.go",
        "stringmap.go",
    ],
    deps = [
        "@com_github_go_redis_redis//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
