load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "datatypes.go",
        "redisstringmap.go",
        "stringmap.go",
        "utcclock.go",
        "utctimer.go",
    ],
    deps = [
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_go_redis_redis//:go_default_library",
    ],
    visibility = ["//visibility:public"],
)
