load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "datatypes.go",
        "utcclock.go",
        "utctimer.go",
        "vote.go",
    ],
    importpath = "github.com/jakevoytko/crbot/model",
    visibility = ["//visibility:public"],
    deps = ["@com_github_bwmarrin_discordgo//:go_default_library"],
)
