load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["system_test.go"],
    deps = [
        "//app:go_default_library",
        "//feature/help:go_default_library",
        "//feature/learn:go_default_library",
        "//feature/list:go_default_library",
        "//testutil:go_default_library",
    ],
    timeout = "short",
)
