load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "discordsession.go",
        "fakeutcclock.go",
        "fakeutctimer.go",
        "gist.go",
        "inmemorystringmap.go",
        "util.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
