load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "feature.go",
        "helpexecutor.go",
        "helpparser.go",
    ],
    importpath = "github.com/jakevoytko/crbot/feature/help",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "//util:go_default_library",
        "@com_github_aetimmes_discordgo//:go_default_library",
    ],
)
