load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "karmaexecutor.go",
        "karmaparser.go",
        "feature.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "//util:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
