load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "karmalistexecutor.go",
        "karmalistfeature.go",
        "karmalistparser.go",
        "modelhelper.go",
    ],
    importpath = "github.com/jakevoytko/crbot/feature/karmalist",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_jakevoytko_go_stringmap//:go_default_library",
    ],
)
