load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "customexecutor.go",
        "customlearnexecutor.go",
        "customlearnparser.go",
        "customparser.go",
        "feature.go",
        "unlearnexecutor.go",
        "unlearnparser.go",
    ],
    importpath = "github.com/jakevoytko/crbot/feature/learn",
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "//util:go_default_library",
        "@com_github_aetimmes_discordgo//:go_default_library",
        "@com_github_jakevoytko_go_stringmap//:go_default_library",
    ],
)
