load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "feature.go",
        "listexecutor.go",
        "listparser.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "//testutil:go_default_library",
    ]
)
