load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "ballotexecutor.go",
        "ballotparser.go",
        "feature.go",
        "modelhelper.go",
        "statusexecutor.go",
        "statusparser.go",
        "vote.go",
        "voteexecutor.go",
        "voteparser.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//api:go_default_library",
        "//feature:go_default_library",
        "//log:go_default_library",
        "//model:go_default_library",
        "//util:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["modelhelper_test.go"],
    library = ":go_default_library",
    deps = ["//util:go_default_library"],
)
