load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = glob(["*.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//feature/help:go_default_library",
        "//feature/moderation:go_default_library",
        "//testutil:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
)
