load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["feature_test.go"],
    deps = [
        "//feature/help:go_default_library",
        "//feature/moderation:go_default_library",
        "//testutil:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
    ],
    timeout = "short",
)
