load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = [
        "feature_test.go",
        "modelhelper_test.go",
        "statusutils_test.go",
    ],
    deps = [
        "//app:go_default_library",
        "//feature/vote:go_default_library",
        "//model:go_default_library",
        "//testutil:go_default_library",
        "@com_github_bwmarrin_discordgo//:go_default_library",
        "@com_github_jakevoytko_go_stringmap//:go_default_library",
    ],
    timeout = "short",
)
